<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Events Hub</string>
    <string name="concerts_theater" tools:ignore="ExtraTranslation"><![CDATA[Concerts & Theater]]></string>
    <string name="ev_wth_friends">Events with friends</string>
    <string name="friends_go">Friends go</string>
    <string name="latest">Most recent</string>
    <string name="map_location">Map Location</string>
    <string name="meetup_for_android_developer_s">Meetup for Android Developer\'s</string>
    <string name="new_account">New Account</string>
    <string name="signup_desc">Start by entering your name and category below.</string>
    <string name="login_desc">Enter your login details to access your account</string>
    <string name="log_in">Log In</string>
    <string name="message">This App will send you an SMS message for verification and standard rates apply.. Kindly enter your phone Number</string>
    <string name="reset_pass_message">Seems like you forgot your password for Event Hub. If this is true, click below to reset your password.</string>
    <string name="location">Nairobi</string>
    <string name="username">Derrick Wadek</string>
    <string name="user_title">Android Developer</string>
    <string name="friends_number">345 friends</string>
    <string name="greeting_banner">Hello,</string>
    <string name="username_surname">WadeQ!</string>
    <string name="event_type_banner">Professional events</string>
    <string name="social_events">Social events</string>
    <string name="most_popular">Most popular</string>
    <string name="event_info">Event Info</string>
    <string name="event_title">Android DevFest 2020</string>
    <string name="event_date">Date</string>
    <string name="event_time">23.09.19 7PM</string>
    <string name="event_location_banner">Location</string>
    <string name="event_location">PALACE stadium</string>
    <string name="event_entry_fee">$ 90</string>
    <string name="about">About</string>
    <string name="detail">Detail</string>
    <string name="visitors">Visitors</string>
    <string name="event_date_banner">FRI, 20 Sep 2020</string>
    <string name="event_time_duration">6:00 PM - 8:30 PM</string>
    <string name="event_location_baner">FreeckySpace Art Centre</string>
    <string name="location_update_real">Fancy Avenue 23, Level 4 California, USA CA94103</string>
    <string name="event_friends_attendees">4 friends will go on this event</string>
    <string name="event_description">You can easily schedule professional meetings, search for cool events, and even buy tickets for any concerts held in your city! What do you think about this application? We’d love to hear everyone!</string>
    <string name="event_registration">with registration</string>
    <string name="register">REGISTER</string>
    <string name="free">FREE</string>
    <string name="by_google">By Google</string>
    <string name="event_title_banner">Flutter Dev Meetup</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">UI Preference</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Dark Theme</string>
    <string name="attachment_title">Light Theme</string>
    <string name="dark_theme_summary">Toggle for dark theme in Event Hub.</string>
    <string name="light_theme_summary">Toggle for light theme in Event Hub.</string>

</resources>
