<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="dark"
            app:summary="@string/dark_theme_summary"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:key="light"
            app:summary="@string/light_theme_summary"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>
