<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Top Headerbar-->
        <LinearLayout
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/ib_menu_item"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="10dp"
                android:background="@drawable/menu" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nairobi"
                    android:textColor="#424242"
                    android:textSize="17sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="3dp"
                    app:srcCompat="@drawable/ic_keyboard_arrow_down" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:padding="6dp"
                app:srcCompat="@drawable/ic_search" />

        </LinearLayout>

        <!--Profile Tab-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/circularsolid"
            android:padding="14dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/adek" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="vertical"
                android:layout_marginLeft="15dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:text="Derrick Wadek"
                        android:textColor="#59408F"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/ib_edit_profile"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="10dp"
                        android:padding="3dp"
                        android:background="@drawable/ic_edit"
                        android:layout_marginLeft="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tv_user_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Android Developer"
                        android:textColor="#424242"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="5dp"
                        android:layout_height="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:alpha="0.6"
                        app:srcCompat="@drawable/circle_dark_grey_fil" />

                    <TextView
                        android:id="@+id/tv_display_friends"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="345 friends"
                        android:textColor="#424242"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <!--Big Text-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello, "
                android:textColor="#424242"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="WadeQ!"
                android:textColor="#424242"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!--Options-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/prof_event"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:background="@drawable/my_gradient_drawable2"
                        android:minHeight="100dp"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="3dp"
                            android:layout_marginEnd="3dp"
                            android:padding="3dp"
                            app:srcCompat="@drawable/briefcase"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="3dp" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="Professional events"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:layout_marginLeft="5dp" />

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/concerts_events"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:background="@drawable/my_gradient_drawable3"
                        android:minHeight="100dp"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="3dp"
                            android:layout_marginEnd="3dp"
                            android:padding="3dp"
                            app:srcCompat="@drawable/masks"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="3dp" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/concerts_theater"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:layout_marginLeft="5dp" />

                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/social_events"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:background="@drawable/my_gradient_drawable"
                        android:minHeight="100dp"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="3dp"
                            android:layout_marginEnd="3dp"
                            android:padding="3dp"
                            app:srcCompat="@drawable/megaphone"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="3dp" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="Social events"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:layout_marginLeft="5dp" />

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/friends_events"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:background="@drawable/my_gradient_drawable_"
                        android:minHeight="100dp"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="3dp"
                            android:layout_marginEnd="3dp"
                            android:padding="3dp"
                            app:srcCompat="@drawable/coupls"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="3dp" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/ev_wth_friends"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:layout_marginLeft="5dp" />

                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <!--Slide Options-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:alpha="0.8"
                    app:srcCompat="@drawable/circle_blue_fil" />

                <TextView
                    android:id="@+id/tv_most_popular"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Most popular"
                    android:textColor="#4D53E0"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:gravity="left">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    android:alpha="0.8"
                    app:srcCompat="@drawable/circle_blue_fil" />

                <TextView
                    android:id="@+id/tv_latest"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latest"
                    android:textColor="#4D53E0"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <!--List View (Adding just one item)-->
        <RelativeLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_event"
                android:scrollbars="horizontal"
                android:scrollbarThumbHorizontal="@drawable/scrollbar"
                android:fadeScrollbars="false"
                android:scrollbarSize="5dp"
                android:isScrollContainer="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>